Bug 355973 - kcm_spellchecking failed to Add Ignore Word
Summary: kcm_spellchecking failed to Add Ignore Word
Status: RESOLVED FIXED
Alias: None
Product: frameworks-sonnet
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Sandsmark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-27 03:14 UTC by Leslie Zhai
Modified: 2016-04-12 09:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leslie Zhai 2015-11-27 03:14:14 UTC
By default there are some kdeWords (ignore_en_US) such as Amarok, KAddressBook, KDevelop, KHTML, KIO, KJS, KMail, KMix, KOrganizer, Konqueror, Kontact, Nepomuk, Okular, Qt, Sonnet, helle

But added NEW Ignore Word such as KJieba, it failed to save to ~/.config/KDE/Sonnet.conf

KF5: v5.16.0
Qt5: v5.5.1

Reproducible: Always

Steps to Reproduce:
1. open kcm_spellchecking, add new Ignore Word, click OK
2. reopen kcm_spellchecking, the new Ignore Word was not there

Actual Results:  
the new Ignore Word was not there ~/.config/KDE/Sonnet.conf

Expected Results:  
save to ~/.config/KDE/Sonnet.conf
Comment 1 Leslie Zhai 2016-04-12 09:08:40 UTC
Git commit 27d7b1fbe89c5ccfab29f4abede4a49a8581cfe5 by Leslie Zhai.
Committed on 12/04/2016 at 09:09.
Pushed by lesliezhai into branch 'master'.

Fix failed to save ignore word issue

REVIEW: 126180

M  +1    -0    src/core/settings.cpp

http://commits.kde.org/sonnet/27d7b1fbe89c5ccfab29f4abede4a49a8581cfe5