Fix failed to save ignore word issue

BUG: 355973

REVIEW: 126180