src/core/settings.cpp
@@ -194,6 +194,7 @@ bool Settings::setQuietIgnoreList(const QStringList &ignores)
         d->ignore.insert(*itr, true);
         changed = true;
     }
+    save();
     return changed;
 }
 
